fix: dot svg within blank cells was left-aligned, now aligns centrally

--- a/src/index.css
+++ b/src/index.css
@@ -139,6 +139,8 @@ td {
 
 .ReactVirtualized__Table__rowColumn {
   margin-right: 0;
+  display: flex;
+  justify-content: center;
 }
 
 .ReactVirtualized__Grid__innerScrollContainer {
